Description de fig:acidification b Corresponding Supplementary methods

--- a/fig_plis/article_plis.tex
+++ b/fig_plis/article_plis.tex
@@ -41,7 +41,7 @@ The slow acidification of caseins, a family of milk proteins, is well known to r
 
 %There are many ways and reasons for a film to wrinkle. An elastic film buckles due to excess area with respect to its boundaries. Wrinkling is a buckling hindered by a substrate: the mismatch of elastic properties between the film and the substrate selects the preferred wrinkling wavelength~\cite{Gough1940, Bijlaard1946}. On the engineering side the last two decades have seen a bloom of methods to obtain well-controlled patterns via linear~\cite{Bowden1998, Genzer2006, Hu1998, Kim2010, Vandeparre2011, Li2013} or nonlinear wrinkling~\cite{Efimenko2005, Guvendiren2010, Kim2011a, Brau2011}. Such patterns can be triggered by temperature dilation, swelling or the removal of pre-strain. On the biology side wrinkling-controlled morphogenesis is ubiquitous: ageing and the loss of elastic fibres makes our skin wrinkles~\cite{Bissett1987, Genzer2006}, difference in growth rates between the gut tube and its dorsal anchoring is responsible for the vilification of guts~\cite{Savin2011, Ciarletta2014, Shyer2013}, localized cell death in biofilms focuses mechanical forces and initiates 3D labyrinth pattern~\cite{Trejo2013, Asally2012}. On the physics side analogues of wrinkling have been found in situations where an effective substrate comes from the resistance to uniaxial stretching~\cite{Cerda2003}, from gravity~\cite{Kolinski2009, Vella2009, Pineirua2013, Lucantonio2013}, from boundaries~\cite{Vandeparre2011a, Li2013} or from adhesion~\cite{Vella2009a}. Dealing only with (semi)infinite substrates, Biot generalised the elasticity of both the film and the substrate to viscoelasticity~\cite{Biot1957} or poroelasticity~\cite{Biot1964}, leading to time-dependent kinetic wavelength selection. Stability analysis of a film lying on a thin viscous substrate was studied only recently~\cite{Huang2002}. Since in practice gravity sets the wavelength in such situation~\cite{Smoluchowski1910}, the wrinkling on a confined viscous substrate has not been studied experimentally.
 
-There are many ways and reasons for a film to wrinkle. An elastic film buckles due to excess area with respect to its boundaries and wrinkles when buckling is hindered by a substrate. The selection of the preferred wrinkling wavelength is peculiar to the situation and is related to the mismatch of elastic properties between the surface and the substrate~\cite{Gough1940, Bijlaard1946, Biot1957, Bowden1998, Cerda2003, Genzer2006}.  On the biology side wrinkling-controlled morphogenesis is ubiquitous. Ageing and the loss of elastic fibres makes our skin wrinkles~\cite{Bissett1987, Genzer2006}. Difference in growth rates between the gut tube and its dorsal anchoring is responsible for the vilification of guts~\cite{Savin2011, Ciarletta2014, Shyer2013}. Localized cell death in biofilms focuses mechanical forces and initiates 3D labyrinth pattern~\cite{Trejo2013, Asally2012}. On the physics side the last two decades have seen a bloom of methods to obtain well-controlled patterns via linear~\cite{Bowden1998, Genzer2006, Hu1998, Kim2010, Vandeparre2011, Li2013} or nonlinear behaviour~\cite{Efimenko2005, Guvendiren2010, Kim2011a, Brau2011}. Such patterns can be triggered by temperature dilation~\cite{Bowden1998}, swelling~\cite{Hu1998} or the removal of pre-strain~\cite{Genzer2006}. 
+There are many ways and reasons for a film to wrinkle. An elastic film buckles due to excess area with respect to its boundaries and wrinkles when buckling is hindered by a substrate. The selection of the preferred wrinkling wavelength is peculiar to the situation and is related to the mismatch of elastic properties between the surface and the substrate~\cite{Gough1940, Bijlaard1946, Biot1957, Bowden1998, Cerda2003, Genzer2006}.  On the biology side wrinkling-controlled morphogenesis is ubiquitous. Ageing and the loss of elastic fibres makes our skin wrinkles~\cite{Bissett1987, Genzer2006}. Difference in growth rates between the gut tube and its dorsal anchoring is responsible for the vilification of guts~\cite{Savin2011, Ciarletta2014, Shyer2013}. Localized cell death in biofilms focuses mechanical forces and initiates 3D labyrinth pattern~\cite{Trejo2013, Asally2012}. On the physics side the last two decades have seen a bloom of methods to obtain well-controlled patterns via linear~\cite{Bowden1998, Genzer2006, Hu1998, Kim2010, Vandeparre2011, Li2013} or nonlinear wrinkling~\cite{Efimenko2005, Guvendiren2010, Kim2011a, Brau2011}. Such patterns can be triggered by temperature dilation~\cite{Bowden1998}, swelling~\cite{Hu1998} or the removal of pre-strain~\cite{Genzer2006}. 
 
 %ph swelling: hu_1998_Polymer gels with engineered environmentally and kim_2010_Dynamic display of biomolecular patterns
 %compressive stress: kim_2011_Hierarchical folding of elastic membranes under
@@ -49,7 +49,7 @@ There are many ways and reasons for a film to wrinkle. An elastic film buckles d
 
 Yet, benchmark experiments that explore the possibility of wrinkling in confined porous soft materials immersed in a buoyancy-matched viscous medium are in line, not only from a physics point of view, but also to get fundamental insights into biologically relevant situation. Indeed, stability analysis of a film lying on a thin viscous substrate was studied only recently~\cite{Huang2002} and remains theoretical because, on a free interface, gravity dominates over viscous substrate. In a biological context, thin tissues, e.g. epithelimum or endothelium, are naturally confined and immersed in a nearly buoyant medium, e.g. lymph, blood or mucus, a practical situation where a thin viscous substrate would set the wrinkling wavelength. Moreover, most biological films are porous, and little is known on the interplay between permeability and wrinkling~\cite{Ma2004,Longley2013}.
 
-Here, we introduce model permeable biogels that produce hierarchical wrinkling as a result of their interplay between their gelation dynamics and the confinement conditions. In slit geometry, we slowly acidify a dispersion of caseins, a family of milk proteins. As a result, not only does the casein form a gel as expected~\cite{Bremer1989} -- this is a well-known effect used in yoghurt making -- but the gel starts to produce wrinkling patterns in cascade when casein adhesion to the slit walls is turned off. Using a combination of rheology, light microscopy and confocal microscopy, we demonstrate that upon acidification the casein network spontaneously shrinks then swells at the micron level and wrinkles at the millimetre scale. We systematically investigate such swelling-induced wrinkling of a porous gel film sandwiched between two viscous layers, the whole system being confined between two glass plates. As shown in Fig.~\ref{fig:dynamics} and in Supplementary Videos 1 and 2, transverse confinement leads to saturation of the amplitude on both the top and bottom walls followed by a cascade of secondary and ternary buckling. Such cascade buckling has already been observed by~\cite{Roman1999} in a one-dimensional macroscopic system, a sheet of steel forced to buckle between two solid plates. In addition one has to note that the primary wavelength is much smaller than the size of the system, implying that a simple buckling scenario cannot explain the observations in Fig.~\ref{fig:dynamics} and that only a wrinkling instability can be invoked. 
+Here, we introduce model permeable biogels that produce hierarchical wrinkling as a result of their interplay between their gelation dynamics and the confinement conditions. In slit geometry, we slowly acidify a dispersion of caseins, a family of milk proteins. As a result, not only does the casein form a gel as expected~\cite{Roefs1986,Bremer1989} -- this is a well-known effect used in yoghurt making -- but the gel starts to produce wrinkling patterns in cascade when casein adhesion to the slit walls is turned off. Using a combination of rheology, light microscopy and confocal microscopy, we demonstrate that upon acidification the casein network spontaneously shrinks then swells at the micron level and wrinkles at the millimetre scale. We systematically investigate such swelling-induced wrinkling of a porous gel film sandwiched between two viscous layers, the whole system being confined between two glass plates. As shown in Fig.~\ref{fig:dynamics} and in Supplementary Videos 1 and 2, transverse confinement leads to saturation of the amplitude on both the top and bottom walls followed by a cascade of secondary and ternary buckling. Such cascade buckling has already been observed by~\cite{Roman1999} in a one-dimensional macroscopic system, a sheet of steel forced to buckle between two solid plates. In addition one has to note that the primary wavelength is much smaller than the size of the system, implying that a simple buckling scenario cannot explain the observations in Fig.~\ref{fig:dynamics} and that only a wrinkling instability can be invoked. 
 
 \begin{figure}[ht!]
 	\includegraphics{dynamics}%
@@ -64,14 +64,14 @@ The main goal of the present study is thus to identify the selection mechanism o
 
 \begin{figure}
 	\includegraphics{acidification}%
-	\caption{Acid-induced protein gel properties behave non monotonically with pH. (a) pH decrease over time in a 4\%w sodium caseinate solution acidified by 4\%w GDL. The horizontal line indicates isoelectric pH of caseins. (b) Evolution of the storage modulus $G'$ measured in a rheometer with full adhesion to rotor and stator. (c) Evolution of pore size measured by confocal microscopy in a slit geometry with either adhesion to all walls (black line) or no adhesion to top wall, i.e. allowed syn\ae{}resis and swelling (orange dashed line).}%
-	\label{fig:acidification}%
+	\caption{Acid-induced protein gel properties behave non monotonically with pH. (a) pH decrease over time in a 4\%w sodium caseinate solution acidified by 4\%w GDL. The horizontal line indicates isoelectric pH of caseins. (b) Corresponding evolution of the fraction of free caseins. Symbols are direct measures upon addition of GDL. Continuous line is deduced from $x_\text{free}$ at the same pH obtained by addition of HCl 1 molar and waiting for equilibration (insert). (c) Evolution of the storage modulus $G'$ measured in a rheometer with full adhesion to rotor and stator. (d) Evolution of pore size measured by confocal microscopy in a slit geometry with either adhesion to all walls (black line) or no adhesion to top wall, i.e. allowed syn\ae{}resis and swelling (orange dashed line).}%
+	\label{fig:acidification}
 \end{figure}
 
 
 To form wrinkled patterns such as the one observed in figure~\ref{fig:dynamics}, ones needs to take advantage of the pH sensitivity of caseins to control the route to gelation, to fine tune the gel properties and the boundary conditions.
 
-The stability of caseins dispersion strongly depend on the pH of the solution. Supplementary Video 3 shows the titration of a caseins dispersion at 1\%w by 1 molar HCl. At pH=7, the caseins are well dispersed then then flocculate between pH=5.5 to 4 and finaly at pH=3 the solution become clear again. However as one increases the caseins concentration up to 4\%w, at low pH the caseins redispersion is not total, Supplementary Video 4. The state diagram of caseins as a function of the pH is related to charge stabilization. At neutral pH caseins are charged negatively and repel each other. As the pH decreases to the isoelectric point of the caseins (pH$\approx 4.5$), caseins molecules loose their negative net charge and tend to stick to each other [ref XXX casein stability]. Beyond the isoelectric point casein acquire a positive net charge and therefore partially re-dissolve. In the inset of Figure~\ref{fig:acidification}b, we quantify this effect and measure with UV absorption spectroscopy the amount of free caseins within the 4\%w dispersion as a function of pH (see Supplementary Methods). Starting at pH=6.8 all the casein molecules are well dispersed and the free casein fraction $x_\text{free}$ is 1. Upon decreasing the pH of the solution to the isolectric point the free casein fraction drop to almost 0, almost all the casein molecule are aggregated. Further decrease of the pH of the solution lead to a partial redissolution of the casein aggregates. At pH=2 the fraction of free casein is 0.35.
+The stability of caseins dispersion strongly depend on the pH of the solution. Supplementary Video 3 shows the titration of a caseins dispersion at 1\%w by 1 molar HCl. At pH=7, the caseins are well dispersed then then flocculate between pH=5.5 to 4 and finaly at pH=3 the solution become clear again. However as one increases the caseins concentration up to 4\%w, at low pH the caseins redispersion is not total, Supplementary Video 4. The state diagram of caseins as a function of the pH is related to charge stabilization. At neutral pH caseins are charged negatively and repel each other. As the pH decreases to the isoelectric point of the caseins (pH$\approx 4.6$), caseins molecules loose their negative net charge and tend to stick to each other~\cite{Roefs1986,Bremer1989}. Beyond the isoelectric point casein acquire a positive net charge and therefore partially re-dissolve. In the inset of Figure~\ref{fig:acidification}b, we quantify this effect and measure with UV absorption spectroscopy the amount of free caseins within the 4\%w dispersion as a function of pH (see Supplementary Methods). Starting at pH=6.8 all the casein molecules are well dispersed and the free casein fraction $x_\text{free}$ is 1. Upon decreasing the pH of the solution to the isolectric point the free casein fraction drop to almost 0, almost all the casein molecule are aggregated. Further decrease of the pH of the solution lead to a partial redissolution of the casein aggregates. At pH=2 the fraction of free casein is 0.35.
 
 %On the Stability of Casein Micelles, Pieter Walstra J. of dairy science 1990
 
@@ -177,7 +177,7 @@ Home made optical cells are composed of a slide (RS France) and a cover slip (Me
 
 3D data are collected on a Zeiss LSM510 confocal microscope, using \SI{532}{\nano\meter} laser excitation. We use either a 10x (air) lens to measure the geometry of wrinkling (see Supplementary Material) or a 63x (oil) lens to observe the microstructure of the gel. Larger scope pictures, obtained either by stitching fluorescent microscopy images (Nikon Eclipse Ti) or by transmitted/reflected light macroscope (Nikon SMZ745T/Leica DMS1000) are used to measure the wavelength of the primary pattern (Supplementary Figures~\ref{fig:patterns} and \ref{fig:generations}). Secondary pattern wavelength is set to half of the primary wavelength, according to Supplementary Fig.~\ref{fig:generations}.
 Data shown in Fig.~\ref{fig:acidification} a-b are obtained with a SevenCompact pH-meter (Mettler Toledo) and an MCR 301 rheometer (Anton Paar).
-Permeability is measured using a protocol found in \cite{VanDijk1986} (see Supplementary Method and Supplementary Fig.~\ref{fig:permeability}). The amount of free casein protein present in the gel during the GDL acidification process was measured by titration and UV-spectrometry (Ocean Optics) according to the protocol found in [refXXX]
+Permeability is measured using a protocol found in \cite{VanDijk1986} (see Supplementary Method and Supplementary Fig.~\ref{fig:permeability}). The amount of free casein protein present in the gel during the GDL acidification process was measured by titration and UV-spectrometry (Ocean Optics) according to the protocol found in~\cite{Roefs1986} and detailed in Supplementary Method.
 
 \bibliographystyle{naturemag3}
 \bibliography{Yaourt}
@@ -215,13 +215,16 @@ Correspondence and requests for materials should be addressed to TG (\href{mailt
 
 \subsection*{Fraction of free casein proteins as a function of the pH}
 
-the fraction of free casein proteins of a 100mL, 4\%w sodium caseinate dispersion is obtained either by titration by HCl 1 molar or during the action of 4\%w GDL. In both cases, 0.4mL of the 100mL dispersion is sampled regularly as a function of the pH, and centrifuged in eppendorf tubes at 14500 rpm for 3 min. The supernatant is diluted and analysed with a UV absorption spectrometer(Ocean Optics). According to refXXX, we deduced the fraction of free casein proteins from the adsorption spectrum:
+The fraction of free casein proteins of a 100mL, 4\%w sodium caseinate dispersion is obtained either by titration by HCl 1 molar or during the action of 4\%w GDL. In both cases, 0.4mL of the 100mL dispersion is sampled regularly as a function of the pH, and centrifuged in eppendorf tubes at 14500 rpm for 3 min. The supernatant is diluted and analysed with a UV absorption spectrometer(Ocean Optics). According to~\cite{Roefs1986}, we deduced the fraction of free casein proteins from the adsorption spectrum:
 %
-\begin{equation}
-x_{free}=\frac{A(\text{pH})}{A(\text{pH}=7)}\text{, with } A(\text{pH})=A_{280}-A_{320}XXX
-\end{equation}
+\begin{align}
+x_{free} &= \frac{A(\text{pH})}{A(\text{pH}=7)},\\
+\text{with }A(\text{pH}) &= A_{280}-1.706 A_{320},
+\end{align}
 %
-where  $A_{280}$ is the absortion peak due to XXX and $A_{320}$ is an estimate of the absorption due to turbidity. 
+where $A_{280}$ is the absorption peak due to aromatic amino acids in the casein molecules plus a turbidity background and $A_{320}$ is only due to turbidity. 
+
+Above the isoelectric point, the homogeneous acidification by GDL continuously creates very small protein aggregates that are difficult to centrifuge. Such suspensions were too turbid to reliably measure $x_{free}$.
 
 \subsection*{Microstructure measurement}
 
