references in conclusion and various typos

--- a/fig_plis/article_plis.tex
+++ b/fig_plis/article_plis.tex
@@ -31,7 +31,7 @@ amsmath,amssymb,prl]{revtex4-1}
 \affiliation{Universit\'e de Lyon, Laboratoire de Physique, \'Ecole Normale Sup\'erieure de Lyon, CNRS UMR 5672, 46 All\'ee d'Italie, 69364 Lyon cedex 07, France}
 
 \begin{abstract}
-The slow acidification of caseins, a family of milk proteins, is well known to result in the formation of gels -- this is indeed one of the key steps to make yoghurt. Here, using the casein proteins as  building blocks and the acidulent Glucono-$\delta$-lactone, we design model thin biogel layers that wrinkles in cascade. Using a combination of titration, rheology, light microscopy and confocal microscopy, we demonstrate that, during the acidification, the gel shrinks and swells creating constrains that induce Darcy and Poiseuille flows and wrinkles the gel. We have develop an elasto-hydrodynamic model that predicts correctly the wrinkling wavelength. Our results should be universal for acid-induced protein gels as it is based on pH induced charge stabilisation/destabilisation and on control of boundary conditions. As such it could set a benchmark to gain fundamental insights into wrinkled biological tissues, to texture food or to design surfaces for optical purposes.
+The slow acidification of caseins, a family of milk proteins, is well known to result in the formation of gels -- this is indeed one of the key steps to make yoghurt. Here, using the casein proteins as  building blocks and the acidulent glucono-$\delta$-lactone, we design model thin biogel layers that wrinkles in cascade. Using a combination of titration, rheology, light microscopy and confocal microscopy, we demonstrate that, during the acidification, the gel shrinks and swells creating constrains that induce Darcy and Poiseuille flows and wrinkles the gel. We have develop an elasto-hydrodynamic model that predicts correctly the wrinkling wavelength. Our results should be universal for acid-induced protein gels as it is based on pH induced charge stabilisation/destabilisation and on control of boundary conditions. As such it could set a benchmark to gain fundamental insights into wrinkled biological tissues, to texture food or to design surfaces for optical purposes.
 \end{abstract}
 
 \maketitle
@@ -75,11 +75,11 @@ The stability of caseins dispersion strongly depend on the pH of the solution. S
 
 %On the Stability of Casein Micelles, Pieter Walstra J. of dairy science 1990
 
-To form a space spanning gel, flocculation need to be prevented. We use of Glucono-$\delta$-lactone (GDL) a molecule  that slowly hydrolyses into an acid and thus lowers slowly, continuously and homogeneously the pH of the medium, Fig.~\ref{fig:acidification}a. This GDL controlled acidification enables the formation of a bulk gel phase below pH=5.3 with $x_\text{free}\approx 0$. As shown on Figure~\ref{fig:acidification}a and b, when adding enough GDL the pH lowers beyond the isoeletric point and $x_\text{free}$ rises again. We monitor the GDL induced gelation with a rheometer in cone plate geometry. As casein strongly adsorbs to surfaces, the strain and stress are well transmitted to the casein dispersion and we can measure the elastic and viscous modulus of the casein dispersion as a function of time, Figure~\ref{fig:acidification}c. The mechanical properties of the gel are closely related to the fraction of free casein. First, the dispersion solidifies then reaches its maximum elasticity (500 Pa) at the isoelectric point and finally the elastic modulus decreases down to 100 Pa. This finite value indicates that the sample is still a gel.
+To form a space spanning gel, flocculation needs to be prevented. We use of glucono-$\delta$-lactone (GDL) a molecule  that slowly hydrolyses into an acid and thus lowers slowly, continuously and homogeneously the pH of the medium, Fig.~\ref{fig:acidification}a. This GDL controlled acidification enables the formation of a bulk gel phase below pH=5.3 with $x_\text{free}\approx 0$. As shown on Figure~\ref{fig:acidification}a and b, when adding enough GDL the pH lowers beyond the isoeletric point and $x_\text{free}$ rises again. We monitor the GDL induced gelation with a rheometer in cone plate geometry. As casein strongly adsorbs to surfaces, the strain and stress are well transmitted to the casein dispersion and we can measure the elastic and viscous modulus of the casein dispersion as a function of time, Figure~\ref{fig:acidification}c. The mechanical properties of the gel are closely related to the fraction of free casein. First, the dispersion solidifies then reaches its maximum elasticity (500 Pa) at the isoelectric point and finally the elastic modulus decreases down to 100 Pa. This finite value indicates that the sample is still a gel.
 
 To gain further insight into the mechanical properties of the gel we turn to micro structural observations under confocal microscopy. As shown in Supplementary Figure~\ref{fig:nonmonotonic} the gel consist in a space spanning fractal network with a cut off length scale $\xi$ that corresponds to the maximum pore size of the network. This model fits the structure at all times but its parameters vary non monotonously during GDL acidification. As shown in Figure~\ref{fig:acidification}d, when reaching the isolectric point $\xi$ increases up to a maximum length of \SI{7}{\micro\metre} due to the solvent expulsion out of the casein network [refXXX]. This stiffens the arms of the network and is responsible for the increase of elasticity. Beyond the isoelectric point $\xi$ decreases down to \SI{4}{\micro\metre}. As caseins regain solubility, the strands of the network swell, the pores shrink and the gel weakens.
 
-XXXCe paragraphe fait-il sens ici ?XXX As seen on the confocal measurements, the gel is porous and is permeable to the solvent.  This property is determinant as it allow the gel to absorb and expel the solvent and therefore change its volume when sticky boundary are turned off. To quantify this effect, we have embedded the casein gel inside a capillary and dip vertically the capillary in an aqueous buffer [refXXX]. In the Supplementary Figure~\ref{fig:permeability}, we observe that the aqueous buffer goes through the gel and rise in the tube due to capillary forces. Exploitation of this experiment give the permeability of the gel: \SI{67000}{\square\nano\metre}.
+XXXCe paragraphe fait-il sens ici ?XXX As seen on the confocal measurements, the gel is porous and is permeable to the solvent.  This property is determinant as it allow the gel to absorb and expel the solvent and therefore change its volume when sticky boundary are turned off. To quantify this effect, we have embedded the casein gel inside a capillary and dip vertically the capillary in an aqueous buffer~\cite{VanDijk1986}. In the Supplementary Figure~\ref{fig:permeability}, we observe that the aqueous buffer goes through the gel and rise in the tube due to capillary forces. Exploitation of this experiment give the permeability of the gel: \SI{67000}{\square\nano\metre}.
 
 Boundary conditions is the final parameter that is essential to form wrinkled patterns. The evolution of $\xi$ when sticky boundaries are on reflects the inner constrains of the gel:  $\xi$ increases, the stand of the network become thinner and the gel wants to retract; then $\xi$ decreases, the stands of network swell and the gel wants to expend. When the casein adhesion to the upper boundary is turned off, the gel still not wrinkles because it remains attached to the bottom wall, but it detach from the top wall. In this situation we can monitor $\xi$, Fig.~\ref{fig:acidification}d. $\xi$ remains mostly constant and the major effect is reported on the volume occupied by the gel as will be reported below.
 
@@ -103,7 +103,7 @@ Note that adhesion to side walls is necessary to prevent total syn\ae{}resis and
 
 \begin{figure}
 	\includegraphics{sideview}
-	\caption{Measurements and modelling. (a) Confocal $(x,z)$ cuts showing syn\ae{}resis, swelling, wrinkling and cascade buckling. The scale bar is \SI{100}{\micro\metre} (real size ratio). (b) Schematic side view of the cell. The constant thickness gel film (orange) is surrounded by water. Yellow lines show the path of transmitted light through the gel phase. A region of interest is highlighted in gray. (c-d) Confocal microscopy measurement of the volume of the gel phase relative to cell volume and excess area. Crosses correspond to times in (a).}
+	\caption{Measurements and modelling. (a) Confocal $(x,z)$ cuts showing syn\ae{}resis, swelling, wrinkling and cascade buckling. The scale bar is \SI{100}{\micro\metre} (real size ratio). (b) Schematic side view of the cell. The constant thickness gel film (orange) is surrounded by solvent. Yellow lines show the path of transmitted light through the gel phase. A region of interest is highlighted in gray. (c-d) Confocal microscopy measurement of the volume of the gel phase relative to cell volume and excess area. Crosses correspond to times in (a).}
 	\label{fig:sideview}
 \end{figure}
 
@@ -111,7 +111,7 @@ Note that adhesion to side walls is necessary to prevent total syn\ae{}resis and
 
 %Longitudinally constrained swelling of the gel film is the origin and driving force of the buckling instability. The gel area becomes in excess compared to the available area, thus the gel must fold. However, this does not explains how a wavelength is selected.
 
-The determination of the characteristic length $\lambda$ of a wrinkling pattern is an old problem. Large deformations of thin sheets is governed by F\"{o}ppl-von Karman equations  refLaudauXXX,  essentially impossible to solve in analytical form. However using scaling and asymptotic arguments one can obtain the dominant wavelength of the wrinkling pattern and isolate the physically meaningful ingredients. An elastic film buckles due to excess area with respect to its boundaries. Wrinkling is a buckling hindered by a substrate: the mismatch of elastic properties between the film and the substrate selects the preferred wrinkling wavelength~\cite{Gough1940, Bijlaard1946}. $\lambda$ is then set by the competition between the flexural modulus of the film $B=E/(1-\nu^2)$ ($E$ Young modulus, $\nu$ Poisson ratio) and a transverse load $\sigma_\perp$. For small deflections of  amplitude $A$, $\lambda$ scales as~\cite{Vella2009,Kolinski2009}: 
+The determination of the characteristic length $\lambda$ of a wrinkling pattern is an old problem. Large deformations of thin sheets is governed by F\"{o}ppl-von Karman equations ~\cite{landau1986},  essentially impossible to solve in analytical form. However using scaling and asymptotic arguments one can obtain the dominant wavelength of the wrinkling pattern and isolate the physically meaningful ingredients~\cite{Cerda2003}. An elastic film buckles due to excess area with respect to its boundaries. Wrinkling is a buckling hindered by a substrate: the mismatch of elastic properties between the film and the substrate selects the preferred wrinkling wavelength~\cite{Gough1940, Bijlaard1946}. $\lambda$ is then set by the competition between the flexural modulus of the film $B=E/(1-\nu^2)$ ($E$ Young modulus, $\nu$ Poisson ratio) and a transverse load $\sigma_\perp$. For small deflections of  amplitude $A$, $\lambda$ scales as~\cite{Vella2009,Kolinski2009}: 
 %
 \begin{equation}
 \lambda \sim \left( A h^3 \frac{B}{\sigma_{\perp}} \right)^{1/4}.
@@ -121,7 +121,7 @@ The determination of the characteristic length $\lambda$ of a wrinkling pattern 
 
 %L. Landau and E.M. Lifshitz, Theory of Elasticity (Pergamon, New York, 1986), 3rd ed.
 
-This framework has been successfully applied to situations where $\sigma_{\perp}$ comes from the resistance of an elastic substrate ~\cite{Gough1940, Bijlaard1946}. Dealing only with (semi)infinite substrates, Biot generalised the elasticity of both the film and the substrate to viscoelasticity~\cite{Biot1957} or poroelasticity~\cite{Biot1964}, leading to time-dependent kinetic wavelength selection. Futhermore, \ref{eq:lstar} remains valids even when $\sigma_{\perp}$ comes from the resistance to uniaxial stretching~\cite{Cerda2003}, from gravity~\cite{Smoluchowski1910, Kolinski2009, Vella2009, Pineirua2013, Lucantonio2013}, from boundaries~\cite{Vandeparre2011a, Li2013} or from adhesion~\cite{Vella2009a}.
+This framework has been successfully applied to situations where $\sigma_{\perp}$ comes from the resistance of an elastic substrate ~\cite{Gough1940, Bijlaard1946}. Dealing only with (semi)infinite substrates, Biot generalised the elasticity of both the film and the substrate to viscoelasticity~\cite{Biot1957} or poroelasticity~\cite{Biot1964}, leading to time-dependent kinetic wavelength selection. Futhermore, (Eq.~\ref{eq:lstar}) remains valid even when $\sigma_{\perp}$ comes from the resistance to uniaxial stretching~\cite{Cerda2003}, from gravity~\cite{Smoluchowski1910, Kolinski2009, Vella2009, Pineirua2013, Lucantonio2013}, from boundaries~\cite{Vandeparre2011a, Li2013} or from adhesion~\cite{Vella2009a}.
 
 In our situation we now have to determine $\sigma_\perp$. We identify three possible candidates for the transverse load $\sigma_\perp$: the weight or buoyancy of the gel, the porous flow through the gel or the viscous flows in the surrounding water layers. We confirmed that gravity plays no significant role by successfully repeating the wrinkling pattern in a cell held vertically, i.e. with the weight acting longitudinally rather than transversely.
 
@@ -132,7 +132,7 @@ In our situation we now have to determine $\sigma_\perp$. We identify three poss
 	\label{fig:DarcyPoiseuille}
 \end{figure*}
 
-We consider two limit scenario that leads to wrinkling patterns. In a first limit, the film of gel sits without sticking to the bottom wall of the cell ($H_1\rightarrow0$). Creating a 2D blister requires flowing solvent of viscosity $\eta$ through the gel of permeability $\alpha$. Darcy law~\cite{Darcy1856} relates the pressure gradient, estimated as $\sigma_{\perp}/h$, to the volume flux per unit area $v = \frac{\alpha}{\eta}\frac{\sigma_{\perp}}{h} = \frac{dA}{dt}$. Injecting this expression in Eq.~(\ref{eq:lstar}) yields the wavelength of the Darcy mode as
+We consider two limit scenarios that leads to wrinkling patterns. In a first limit, the film of gel sits without sticking to the bottom wall of the cell ($H_1\rightarrow0$). Creating a 2D blister requires flowing solvent of viscosity $\eta$ through the gel of permeability $\alpha$. Darcy law~\cite{Darcy1856} relates the pressure gradient, estimated as $\sigma_{\perp}/h$, to the volume flux per unit area $v = \frac{\alpha}{\eta}\frac{\sigma_{\perp}}{h} = \frac{dA}{dt}$. Injecting this expression in Eq.~(\ref{eq:lstar}) yields the wavelength of the Darcy mode as
 \begin{equation}
 \lambda_D \sim h^{1/2} \alpha^{1/4} \Upsilon^{1/4}
 \end{equation}
@@ -164,7 +164,7 @@ Our results are displayed in Fig.~\ref{fig:DarcyPoiseuille}. Although they provi
 
 \section*{conclusion}
 
-In conclusion we have taken advantage of the properties of the protein casein and carefully ingineered the route to form permeable bio-gels that, in slit geometry,  produce original cascade of wrinkling patterns  when casein adhesion to the slit walls is turned off.  We developed a model that captures the dynamical origin of the constrains exerted on the gel and predict the wrinkling wavelength: Poiseuille flows of the solvent above and below the gel layer for long wavelengths and a new mechanism, Darcy flows of the solvent through the gel layer for short wavelengths. Such a model experiment, because it relies on pH induced charge stabilisation/destabilisation, should be generalisable to different sort of proteins. As such it illustrate daily life problems such as wrinkles encountered while putting up wall paper and could set a benchmark to explore potential applications in food science refXXX or in optical devices such as diffraction gratings or Fresnel lenses refXXX, and the possibility of wrinkling in confined porous soft materials immersed in a buoyancy-matched viscous medium such as biological tissues refXXX.
+In conclusion we have taken advantage of the properties of the protein casein and carefully engineered the route to form permeable biogels that, in slit geometry, produce original cascade of wrinkling patterns when casein adhesion to the slit walls is turned off. We developed a model that captures the dynamical origin of the constrains exerted on the gel and predict the wrinkling wavelength: Poiseuille flows of the solvent above and below the gel layer for long wavelengths and a new mechanism, Darcy flow of the solvent through the gel layer for short wavelengths. Such a model experiment, because it relies on pH induced charge stabilisation/destabilisation, should be generalisable to different sort of proteins. As such it illustrates daily life problems such as wrinkles encountered while putting up wall paper and could set a benchmark to explore potential applications in food science refXXX or in optical devices such as diffraction gratings or Fresnel lenses~\cite{Chan2006a,Li2013}, and the possibility of wrinkling in confined porous soft materials immersed in a buoyancy-matched viscous medium such as biological tissues~\cite{Ma2004,Longley2013}.
 
 
 %role of gravity
